\name{NEWS}
\title{News for Package 'inline'}
\newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}

\section{Changes in inline version 0.3.11 (future)}{
  \itemize{
    \item{Fix bug in \code{cfunction} for \code{.C} convention with raw vectors.}
    \item{Allow \code{rcpp} wrapper to pass another plugin (as eg RcppArmadillo)}
  }
}

\section{Changes in inline version 0.3.10 (2012-10-03)}{
  \itemize{
    \item \code{getDynLib()} error message corrected as suggested by
    Yasir Suhail
    \item Added \code{rcpp()} wrapper for \code{cxxfunction()} which
    sets \code{plugin="Rcpp"}
    \item Converted NEWS to NEWS.Rd
    \item New maintainer, after having coordinated releases (along with
    Romain) since 0.3.5 in June 2010
  }
}
\section{Changes in inline version 0.3.9 (2012-10-02)}{
  \itemize{
    \item Uncoordinating hijacking of package by CRAN maintainers with a
    single word change in cfunction.R to prevent an error under an
    unreleased version of R
  }
}
\section{Changes in inline version 0.3.8 (2010-12-07)}{
  \itemize{
    \item faster \code{cfunction} and \code{cxxfunction} by loading and
    resolving the routine at \dQuote{compile} time
  }
}
\section{Changes in inline version 0.3.7 (2010-11-02)}{
  \itemize{
    \item fix \code{package.skeleton} for use with just a single function
  }
}
\section{Changes in inline version 0.3.6 (2010-07-29)}{
  \itemize{
    \item compileCode now grabs the error message generated by the compiler and 
    uses it in in the error message
  }
}
\section{Changes in inline version 0.3.5 (2010-06-02)}{
  \itemize{
    \item new R function \code{cxxfunction} to generate an R function
    with inlined C++ code using the \code{.Call} calling convention. The
    function was introduced to accomodate the needs of the Rcpp family
    of packages.
    \item new R functions \code{getPlugin} and \code{registerPlugin} to
    manage the plugin system of \code{cxxfunction}.