@@ -1,12 +1,13 @@
 Package: inline
-Version: 0.3.10
+Version: 0.3.11
 Date: $Date$
 Title: Inline C, C++, Fortran function calls from R
 Author: Oleg Sklyar, Duncan Murdoch, Mike Smith, Dirk Eddelbuettel, Romain Francois
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Depends: R (>= 2.4.0), methods
 Suggests: Rcpp (>= 0.8.0)
-Description: Functionality to dynamically define R functions and S4 methods with in-lined C, C++ or Fortran code supporting .C and .Call calling conventions.
+Description: Functionality to dynamically define R functions and S4 methods
+  with in-lined C, C++ or Fortran code supporting .C and .Call calling conventions.
 License: LGPL
 Copyright: Oleg Sklyar, 2005-2010
 LazyLoad: yes
